--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,14 @@
 {
   "tasks": {
-    "dev": "deno run --watch main.ts"
+    "dev": "deno run --allow-net --allow-env --allow-read --watch main.ts",
+    "start": "deno run --allow-net --allow-env --allow-read main.ts"
+  },
+  "compilerOptions": {
+    "jsx": "react-jsx",
+    "jsxImportSource": "react",
+    "jsxImportSourceTypes": "npm:@types/react@^18.3"
   },
   "imports": {
-    "@std/assert": "jsr:@std/assert@1"
+    "react": "npm:react"
   }
 }
